--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,14 +1,12 @@
 .header {
-  padding-top: 45px;
-  height: 74px;
-  border-bottom: 1px solid #545454;
+  padding: 45px 0 41px;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 
 @media screen and (max-width: 480px) {
   .header {
-    min-width: 100%;
     padding-top: 28px;
+    padding-bottom: 32px;
     padding-left: 27px;
-    height: 56px;
   }
 }
