--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,4 +1,5 @@
 .page {
   background: #000;
-  font-family: 'Inter', sans-serif, Arial;
+  background-color: #000;
+  font-family: 'Inter', Arial, sans-serif;
 }
