--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -1,8 +1,9 @@
 .popup__button {
+  width: 358px;
+  height: 50px;
   color: #fff;
   background-color: #000;
-  border: 0;
-  padding: 12px 24px;
+  border: none;
   margin-top: 48px;
   box-sizing: border-box;
   border-radius: 2px;
@@ -17,4 +18,13 @@
 .popup__button:hover {
   background-color: rgba(0, 0, 0, 0.8);
   transition: all 0.2s;
+}
+
+@media screen and (max-width: 560px) {
+  .popup__button {
+    width: 238px;
+    height: 46px;
+    margin-top: 45px;
+    font-size: 14px;
+  }
 }
