--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -2,12 +2,11 @@
   width: 32px;
   height: 32px;
   background: transparent url('../../../images/close-popup.svg') center no-repeat;
-  background-size: 32px 32px;
+  background-size: cover;
   position: absolute;
   top: -40px;
   right: -40px;
-  border: 0;
-  padding: 0;
+  border: none;
   margin: 0;
   cursor: pointer;
 }
@@ -20,12 +19,7 @@
   .popup__close-button {
     width: 20px;
     height: 20px;
-    background-size: 20px 20px;
     top: -36px;
     right: 0;
-    border: 0;
-    padding: 0;
-    margin: 0;
-    cursor: pointer;
   }
 }
