--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,7 +1,10 @@
 .popup__input {
-  padding: 4px 20px;
+  padding-bottom: 13px;
   box-sizing: border-box;
-  font-size: inherit;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.21;
+  color: #000000;
   margin-top: 54px;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
