--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,5 +1,6 @@
 .popup__title {
-  margin: 0;
+  display: block;
+  margin: 34px 64px 0 36px;
   font-style: normal;
   font-weight: 900;
   font-size: 24px;
@@ -8,6 +9,7 @@
 
 @media screen and (max-width: 560px) {
   .popup__title {
+    margin: 25px 22px 0;
     font-size: 18px;
     line-height: 1.22;
   }
