--- a/blocks/profile/__contentWrapper/profile__contentWrapper.css
+++ b/blocks/profile/__contentWrapper/profile__contentWrapper.css
@@ -1,10 +1,10 @@
-.contentWrapper {
+.profile__contentWrapper {
   display: flex;
   align-items: center;
 }
 
 @media screen and (max-width: 480px) {
-  .contentWrapper {
-    display: block;
+  .profile__contentWrapper {
+    flex-direction: column;
   }
 }
