--- a/blocks/profile/__image/profile__image.css
+++ b/blocks/profile/__image/profile__image.css
@@ -1,12 +1,13 @@
 .profile__image {
+  display: block;
   width: 120px;
   height: 120px;
-  border-radius: 60px;
+  border-radius: 50%;
+  object-fit: cover;
 }
 
 @media screen and (max-width: 480px) {
   .profile__image {
-    display: block;
     margin: 0 auto;
   }
 }
