--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -10,11 +10,23 @@
   overflow: hidden;
 }
 
+@media screen and (max-width: 740px) {
+  .profile__subtitle {
+    max-width: 270px;
+  }
+}
+
 @media screen and (max-width: 560px) {
   .profile__subtitle {
-    font-style: normal;
-    font-weight: 400;
+    max-width: 230px;
     font-size: 14px;
     line-height: 1.21;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .profile__subtitle {
+    text-align: center;
+    max-width: 189px;
   }
 }
