--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,5 @@
 @import url('../vendor/normalize.css');
-@import url('../vendor/fonts/Inter/inter.css');
+@import url('../fonts/Inter/fonts.css');
 @import url('../blocks/page/page.css');
 @import url('../blocks/container/container.css');
 @import url('../blocks/header/header.css');
@@ -9,20 +9,21 @@
 @import url('../blocks/profile/__title/profile__title.css');
 @import url('../blocks/profile/__subtitle/profile__subtitle.css');
 @import url('../blocks/profile/__info/profile__info.css');
-@import url('../blocks/profile/__button/profile__button.css');
+@import url('../blocks/profile/__edit-button/profile__edit-button.css');
 @import url('../blocks/profile/__add-button/profile__add-button.css');
-@import url('../blocks/contentWrapper/contentWrapper.css');
+@import url('../blocks/profile/__contentWrapper/profile__contentWrapper.css');
 @import url('../blocks/elements/elements.css');
 @import url('../blocks/elements/__items/elements__items.css');
 @import url('../blocks/elements/__item/elements__item.css');
 @import url('../blocks/elements/__img/elements__img.css');
 @import url('../blocks/elements/__title/elements__title.css');
 @import url('../blocks/elements/__wrapper/elements__wrapper.css');
-@import url('../blocks/elements/__like/elements__like.css');
+@import url('../blocks/elements/__like-button/elements__like-button.css');
 @import url('../blocks/footer/footer.css');
+@import url('../blocks/footer/__text/footer__text.css');
 @import url('../blocks/popup/popup.css');
-@import url('../blocks/popup/_is-opened/popup_is-opened.css');
-@import url('../blocks/popup/__form/popup__form.css');
+@import url('../blocks/popup/_opened/popup_opened.css');
+@import url('../blocks/popup/__container/popup__container.css');
 @import url('../blocks/popup/__content/popup__content.css');
 @import url('../blocks/popup/__title/popup__title.css');
 @import url('../blocks/popup/__button/popup__button.css');
