--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,14 +1,6 @@
 .popup__container {
-  width: 430px;
-  display: flex;
-  flex-direction: column;
-  padding: 0 36px 37px;
-  box-sizing: border-box;
-}
-
-@media screen and (max-width: 560px) {
-  .popup__container {
-    width: 282px;
-    padding: 0 22px 25px;
-  }
+  background-color: #fff;
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+  position: relative;
 }
