--- a/blocks/profile/__content-wrapper/profile__content-wrapper.css
+++ b/blocks/profile/__content-wrapper/profile__content-wrapper.css
@@ -1,10 +1,10 @@
-.profile__contentWrapper {
+.profile__content-wrapper {
   display: flex;
   align-items: center;
 }
 
 @media screen and (max-width: 480px) {
-  .profile__contentWrapper {
+  .profile__content-wrapper {
     flex-direction: column;
   }
 }
