--- a/blocks/elements/__like-button/_active/elements__like-button_active.css
+++ b/blocks/elements/__like-button/_active/elements__like-button_active.css
@@ -1,3 +1,3 @@
 .elements__like-button_active {
-  background: url(../../../images/like_active.svg);
+  background: url(../../../../images/like_active.svg);
 }
