--- a/pages/index.css
+++ b/pages/index.css
@@ -20,6 +20,7 @@
 @import url('../blocks/elements/__wrapper/elements__wrapper.css');
 @import url('../blocks/elements/__like-button/elements__like-button.css');
 @import url('../blocks/elements/__like-button/_active/elements__like-button_active.css');
+@import url('../blocks/elements/__delete-button/elements__delete-button.css');
 @import url('../blocks/footer/footer.css');
 @import url('../blocks/footer/__text/footer__text.css');
 @import url('../blocks/popup/popup.css');
@@ -30,3 +31,6 @@
 @import url('../blocks/popup/__button/popup__button.css');
 @import url('../blocks/popup/__input/popup__input.css');
 @import url('../blocks/popup/__close-button/popup__close-button.css');
+@import url('../blocks/popup/__image-wrapper/popup__image-wrapper.css');
+@import url('../blocks/popup/__image-text/popup__image-text.css');
+@import url('../blocks/popup/__image-opened/popup__image-opened.css');
