--- a/pages/index.css
+++ b/pages/index.css
@@ -30,7 +30,12 @@
 @import url('../blocks/popup/__title/popup__title.css');
 @import url('../blocks/popup/__button/popup__button.css');
 @import url('../blocks/popup/__input/popup__input.css');
+@import url('../blocks/popup/__input/_error/popup__input-error.css');
+@import url('../blocks/popup/__input/_error/_active/popup__input_error_active.css');
+@import url('../blocks/popup/__input/_type_error/popup__input_type_error.css');
 @import url('../blocks/popup/__close-button/popup__close-button.css');
 @import url('../blocks/popup/__image-wrapper/popup__image-wrapper.css');
 @import url('../blocks/popup/__image-text/popup__image-text.css');
 @import url('../blocks/popup/__image-opened/popup__image-opened.css');
+@import url('../blocks/popup/__button/_disabled/popup__button_disabled.css');
+@import url('../blocks/popup/__span-paragraph/popup__span-paragraph.css');
