--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -39,3 +39,10 @@
 @import url('../blocks/popup/__image-opened/popup__image-opened.css');
 @import url('../blocks/popup/__button/_disabled/popup__button_disabled.css');
 @import url('../blocks/popup/__span-paragraph/popup__span-paragraph.css');
+@import url('../blocks/elements/__delete-button/_active/elements__delete-button_active.css');
+@import url('../blocks/popup/__button/_del-confirm/popup__button_del-confirm.css');
+@import url('../blocks/elements/__like-container/elements__like-container.css');
+@import url('../blocks/elements/__like-counter/elements__like-counter.css');
+@import url('../blocks/popup/__title/_avatar/popup__title_avatar.css');
+@import url('../blocks/popup/__button/_avatar/popup__button_avatar.css');
+
